--- a/css/main.css
+++ b/css/main.css
@@ -7,9 +7,13 @@ img{
   max-width: 100%;
 }
 iframe{
-  width: 100%;
-  height: 100%;
-  margin: 0;
+  position:absolute;
+     top:0;
+     right:0;
+     bottom:0;
+     left:0;
+     height: 100%;
+     width: 100%;
 }
 h2{
   font-size: 16px;
@@ -44,7 +48,7 @@ h4, .vistas{
                        "playlist buttons buttons"
                        "playlist comments viewmore";
   height: 100vh;
-  grid-template-rows: 500px .7fr 1fr;
+  grid-template-rows: auto .7fr 1fr;
   grid-template-columns: .4fr 1fr .8fr;
 }
 
@@ -95,6 +99,9 @@ margin-left: 15px;
 }
 .video{
   grid-area: video;
+  position:relative;
+
+     padding-top: 56.25%;
 }
 .vistas{
   margin-top:-16px;
@@ -288,7 +295,7 @@ align-self: start;
     }
   }
   .video{
-    height: 300px;
+    
   }
   #movil {
        display: flex;
