--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,7 @@ body{
   margin: 0;
   font-family: 'Roboto', sans-serif;
 }
+
 img{
   max-width: 100%;
 }
@@ -36,6 +37,8 @@ h4, .vistas{
     padding: 7px;
     display: none;
     cursor: pointer;
+    text-decoration: none;
+
 }
 .nav-content{
   display: flex;
@@ -174,6 +177,11 @@ border: none;
   background-color: #151b31;
   cursor: pointer;
 }
+.references button:focus, .action button:focus{
+  background-color: #151b31;
+  cursor: pointer;
+  outline: none;
+}
 .references .b1{
  background: #8d3cf4;
 }
@@ -226,6 +234,9 @@ align-self: start;
 .comments{
   position: relative;
 }
+.comments input:focus{
+   outline: none;
+}
 .comments .image-com{
   border: none;
   position: absolute;
@@ -257,12 +268,16 @@ align-self: start;
     justify-content: space-around;
     align-items: center;
     box-shadow: 0px 5px 5px 0px rgba(0,0,0,0.5);
+        
   }
   .bar{
     font-size: 17px;
   }
   .nav-content{
     display: none;
+  }
+  #movil{
+    cursor: none;
   }
   .movil-content{
     display: grid;
@@ -272,6 +287,9 @@ align-self: start;
     animation-name: slidein;
       animation-direction: alternate;
     color: white;
+
+  overflow: hidden;
+
   }
 
   .lista{
@@ -339,6 +357,7 @@ align-self: start;
    h2{
      text-align: center;
    }
+
 }
 @media screen and (max-width: 400px){
   .buttons{
